fixed some linting issues + test suits

--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "experimentalDecorators": true,
         "paths": {
             "@trapi/common": ["./packages/common/src"],
             "@trapi/decorator": ["./packages/decorator/src"]
