--- a/packages/decorator/tsconfig.json
+++ b/packages/decorator/tsconfig.json
@@ -1,8 +1,3 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "paths": {
-            "@trapi/common": ["./packages/common/src"]
-        }
-    }
+    "extends": "../../tsconfig.json"
 }
