--- a/lerna.json
+++ b/lerna.json
@@ -2,19 +2,33 @@
     "packages": [
         "packages/*"
     ],
-    "publishConfig": {
-        "access": "public"
-    },
     "command": {
         "publish": {
             "ignoreChanges": [
                 ".eslintrc",
                 "package.json"
             ],
-            "message": "chore(release): publish"
+            "version": {
+                "message": "build(release): publish %s"
+            }
         }
     },
     "npmClient": "npm",
+    "conventionalCommits": true,
     "useWorkspaces": true,
-    "version": "independent"
+    "version": "independent",
+    "changelog": {
+        "labels": {
+            "build": "Build",
+            "ci": "Continuous Integration",
+            "docs": "Documentation",
+            "feat": "New Feature",
+            "fix": "Bug Fix",
+            "perf": "Performance",
+            "refactor": "Refactor",
+            "revert": "Revert",
+            "style": "Style",
+            "test": "Test"
+        }
+    }
 }
