--- a/package.json
+++ b/package.json
@@ -35,29 +35,37 @@
     },
     "scripts": {
         "bootstrap": "lerna bootstrap",
+        "commit": "npx git-cz",
         "clean": "lerna run clean",
         "build": "lerna run build",
         "test": "lerna run test",
-        "pub": "npm run build && lerna publish",
+        "prepublishOnly": "npm run build",
+        "pub": "lerna publish",
         "lint": "eslint --ext .ts ./packages/",
         "lint:fix": "npm run lint -- --fix",
-        "docs:dev": "vitepress dev docs --temp .temp",
-        "docs:build": "vitepress build docs --temp .temp",
-        "docs:help": "vitepress --help"
+        "prepare": "husky install"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.1.2",
+        "@commitlint/config-angular": "^17.1.0",
+        "@commitlint/config-conventional": "^17.1.0",
+        "@commitlint/cz-commitlint": "^17.1.2",
         "@tada5hi/eslint-config-typescript": "^1.0.7",
         "@types/jest": "^27.5.0",
-        "@types/node": "^18.8.0",
+        "@types/node": "^18.8.1",
         "codecov": "^3.8.3",
         "cross-env": "^7.0.3",
         "eslint": "^8.24.0",
+        "husky": "^8.0.1",
         "jest": "^27.5.1",
         "lerna": "^5.5.4",
         "rimraf": "^3.0.2",
         "ts-jest": "^27.1.4",
-        "typescript": "^4.8.4",
-        "vitepress": "^1.0.0-alpha.19",
-        "vue": "^3.2.40"
+        "typescript": "^4.8.4"
+    },
+    "config": {
+        "commitizen": {
+            "path": "@commitlint/cz-commitlint"
+        }
     }
 }
