--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
             ]
         },
         "version": {
-            "message": "build(release): publish %s"
+            "message": "build(release): publish"
         }
     },
     "npmClient": "npm",
