--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -39,17 +39,18 @@
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "devDependencies": {
+        "@trapi/decorator": "^0.0.2",
         "@types/glob": "^8.0.0",
         "@types/minimatch": "^5.1.2",
-        "@types/yup": "^0.32.0",
         "jsonata": "^1.8.6"
     },
     "dependencies": {
-        "@trapi/decorator": "^0.0.2",
         "glob": "^8.0.3",
         "minimatch": "^5.1.0",
-        "typescript": "^4.8.4",
-        "yup": "^0.32.11"
+        "typescript": "^4.8.4"
+    },
+    "peerDependencies": {
+        "@trapi/decorator": ">=0.0.2 <1.0.0"
     },
     "publishConfig": {
         "access": "public"
