--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -36,6 +36,7 @@
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "dependencies": {
+        "locter": "^0.3.2",
         "typescript": "^4.8.4"
     },
     "publishConfig": {
