--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,17 @@
         "no-use-before-define": "off",
         "no-continue": "off",
         "no-shadow": "off",
+        "import/no-extraneous-dependencies": [
+            "error", {
+                "devDependencies": [
+                    "**/*.test.js",
+                    "**/*.test.ts",
+                    "**/*.spec.js",
+                    "**/*.spec.ts",
+                    "**/rollup.config.mjs"
+                ]
+            }
+        ],
 
         "@typescript-eslint/no-throw-literal": "off",
         "@typescript-eslint/no-unused-vars": "off",
