--- a/packages/swagger/package.json
+++ b/packages/swagger/package.json
@@ -39,6 +39,7 @@
         "@trapi/metadata": "^0.4.1",
         "@types/yamljs": "^0.2.31",
         "jest": "^27.5.1",
+        "jsonata": "^2.0.2",
         "rimraf": "^3.0.2"
     },
     "dependencies": {
