feat: initial merge of decorators- & metadata-package

--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -1,9 +1,6 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "paths": {
-            "@trapi/decorators": ["./packages/decorators/src"]
-        }
+        "experimentalDecorators": true
     }
 }
