--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -39,18 +39,12 @@
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "devDependencies": {
-        "@trapi/decorators": "^0.1.1",
-        "@types/glob": "^8.0.0",
-        "@types/minimatch": "^5.1.2",
         "jsonata": "^2.0.2"
     },
     "dependencies": {
-        "glob": "^8.0.3",
-        "minimatch": "^5.1.2",
+        "locter": "^1.0.6",
+        "minimatch": "^7.4.2",
         "typescript": "^4.9.4"
-    },
-    "peerDependencies": {
-        "@trapi/decorators": ">=0.1.1 <1.0.0"
     },
     "publishConfig": {
         "access": "public"
