--- a/packages/swagger/package.json
+++ b/packages/swagger/package.json
@@ -39,6 +39,7 @@
         "@types/yamljs": "^0.2.31",
         "jest": "^27.5.1",
         "jsonata": "^2.0.2",
+        "locter" : "^1.0.6",
         "rimraf": "^3.0.2"
     },
     "dependencies": {
