--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -20,8 +20,10 @@
         "REST-API",
         "decorators",
         "metadata",
+        "types",
+        "analyze",
         "generation",
-        "decorator metadata"
+        "decorator"
     ],
     "author": {
         "name": "Peter Placzek",
@@ -32,19 +34,22 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tada5hi/trapi.git",
-        "directory": "packagesA/metadata"
+        "directory": "packages/metadata"
     },
     "bugs": {
         "url": "https://github.com/Tada5hi/trapi/issues"
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "devDependencies": {
-        "jsonata": "^2.0.2"
+        "jsonata": "^2.0.2",
+        "typescript": "^4.9.5"
     },
     "dependencies": {
         "locter": "^1.0.7",
-        "minimatch": "^7.4.2",
-        "typescript": "^4.9.4"
+        "minimatch": "^7.4.2"
+    },
+    "peerDependencies": {
+        "typescript": "4.7.x || 4.8.x || 4.9.x"
     },
     "publishConfig": {
         "access": "public"
