--- a/packages/swagger/package.json
+++ b/packages/swagger/package.json
@@ -38,8 +38,7 @@
         "@types/yamljs": "^0.2.31",
         "jest": "^27.5.1",
         "jsonata": "^2.0.2",
-        "locter" : "^1.0.7",
-        "rimraf": "^4.3.0"
+        "locter" : "^1.0.7"
     },
     "dependencies": {
         "@trapi/metadata": "^0.4.1",
