--- a/packages/preset-swagger/package.json
+++ b/packages/preset-swagger/package.json
@@ -1,13 +1,34 @@
 {
     "name": "@trapi/preset-swagger",
     "version": "0.0.0",
+    "description": "Preset for swagger related decorators.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "keywords": [
+        "metadata",
+        "decorators",
+        "preset"
+    ],
+    "author": {
+        "name": "Peter Placzek",
+        "email": "contact@tada5hi.net",
+        "url": "https://github.com/tada5hi"
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Tada5hi/trapi.git",
+        "directory": "packages/preset-swagger"
+    },
+    "bugs": {
+        "url": "https://github.com/Tada5hi/trapi/issues"
+    },
+    "homepage": "https://github.com/Tada5hi/trapi#readme",
     "devDependencies": {
         "@trapi/metadata": "^0.4.1"
     },
     "peerDependencies": {
-        "@trapi/metadata": "^0.x"
+        "@trapi/metadata": "1.x || >=1.0.0-alpha.0"
     },
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json"
