--- a/packages/preset-swagger/package.json
+++ b/packages/preset-swagger/package.json
@@ -32,5 +32,9 @@
     },
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json"
-    }
+    },
+    "publishConfig": {
+        "access": "public"
+    },
+    "gitHead": "32baaade4f53d5c78aec4d1bb0e2a92184cb3ab8"
 }
