--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,114 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: main
+name: CI
 
 on:
     push:
-        branches: [ master ]
+        branches: [master, next, beta, alpha]
     pull_request:
-        branches: [ master ]
+        types: [ opened, synchronize ]
+
+permissions:
+    packages: write
+    contents: write
+    issues: write
+    pull-requests: write
+
+env:
+    PRIMARY_NODE_VERSION: 18
 
 jobs:
-    build:
-
+    install:
+        name: Checkout and Install
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [16.x]
-
         steps:
-            - uses: actions/checkout@v3
-
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Install
+              uses: ./.github/actions/install
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: ${{ env.PRIMARY_NODE_VERSION }}
 
-            - name: Build and install packages
+    lint:
+        name: lint Package
+        needs: [build]
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v3
+
+            -   name: Install
+                uses: ./.github/actions/install
+                with:
+                    node-version: ${{ env.PRIMARY_NODE_VERSION }}
+
+            -   name: Build
+                uses: ./.github/actions/build
+
+            -   name: Lint
+                run: |
+                    npm run lint
+
+    build:
+        name: Build Package
+        needs: [install]
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Install
+              uses: ./.github/actions/install
+              with:
+                  node-version: ${{ env.PRIMARY_NODE_VERSION }}
+            - name: Build
+              uses: ./.github/actions/build
+
+    tests:
+        name: Test Package
+        needs: [build]
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v3
+
+            -   name: Install
+                uses: ./.github/actions/install
+                with:
+                    node-version: ${{ env.PRIMARY_NODE_VERSION }}
+
+            -   name: Build
+                uses: ./.github/actions/build
+
+            -   name: Run tests
+                run: |
+                    npm run test
+
+    docs:
+        name: Build & deploy docs
+        needs: [lint, tests]
+        runs-on: ubuntu-latest
+        if: ${{ github.ref_name == 'master' }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Install
+              uses: ./.github/actions/install
+              with:
+                  node-version: ${{ env.PRIMARY_NODE_VERSION }}
+
+            - name: Build
+              run: npm run build --workspace=packages/docs
+
+            - name: CNAME
               run: |
-                npm ci
-                npm run build
-                npm run test
+                  cd ./packages/docs/src/.vitepress/dist/
+                  touch CNAME
+                  echo "trapi.tada5hi.net" > CNAME
+
+            - name: Deploy
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./packages/docs/src/.vitepress/dist
