--- a/packages/swagger/package.json
+++ b/packages/swagger/package.json
@@ -26,8 +26,9 @@
         "dist/"
     ],
     "scripts": {
+        "refresh": "node bin/metadata.js",
         "start": "tsc -p tsconfig.build.json -w",
-        "build": "npm run clean && tsc -p tsconfig.build.json && node bin/metadata.js",
+        "build": "npm run clean && tsc -p tsconfig.build.json",
         "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
         "test": "cross-env NODE_ENV=test jest --config ./test/jest.config.js",
         "test:coverage": "cross-env NODE_ENV=test jest --config ./test/jest.config.js --coverage",
