feat: create decorators package + moved test data

--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -3,8 +3,8 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "paths": {
-            "@trapi/preset-built-in": [
-                "./packages/preset-built-in/src"
+            "@trapi/decorators": [
+                "./packages/decorators/src"
             ]
         }
     }
