--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@trapi/preset-typescript-rest",
+    "name": "@trapi/decorators",
     "version": "1.0.0-alpha.2",
-    "description": "Preset for typescript-rest library.",
+    "description": "Preset for swagger related decorators.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "keywords": [
@@ -18,15 +18,12 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tada5hi/trapi.git",
-        "directory": "packages/preset-typescript-rest"
+        "directory": "packages/preset-swagger"
     },
     "bugs": {
         "url": "https://github.com/Tada5hi/trapi/issues"
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
-    "dependencies": {
-        "@trapi/decorators": "^1.0.0-alpha.2"
-    },
     "devDependencies": {
         "@trapi/metadata": "^1.0.0-alpha.2"
     },
