fix: better naming for decorator-ids & param decorator names

--- a/packages/preset-routup/tsconfig.json
+++ b/packages/preset-routup/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "paths": {
-            "@trapi/metadata": ["./packages/metadata/src"]
+            "@trapi/decorators": ["./packages/decorators/src"],
+            "@trapi/metadata": ["./packages/metadata/src"],
         }
     }
 }
