--- a/packages/preset-typescript-rest/tsconfig.json
+++ b/packages/preset-typescript-rest/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "paths": {
+            "@trapi/decorators": ["./packages/decorators/src"],
             "@trapi/metadata": ["./packages/metadata/src"]
         }
     }
