--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -42,15 +42,14 @@
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "devDependencies": {
-        "jsonata": "^2.0.2",
-        "typescript": "^4.9.5"
+        "jsonata": "^2.0.2"
     },
     "dependencies": {
         "locter": "^1.0.10",
         "minimatch": "^7.4.2"
     },
     "peerDependencies": {
-        "typescript": "4.7.x || 4.8.x || 4.9.x"
+        "typescript": "4.7.x || 4.8.x || 4.9.x || 5.x"
     },
     "publishConfig": {
         "access": "public"
