--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@swc/core": "^1.3.41",
+        "@swc/jest": "^0.2.24",
         "@tada5hi/commitlint-config": "^1.0.0",
         "@tada5hi/eslint-config-typescript": "^1.1.5",
         "@types/jest": "^27.5.0",
@@ -55,7 +57,6 @@
         "jest": "^27.5.1",
         "lerna": "^6.5.1",
         "rimraf": "^4.4.0",
-        "ts-jest": "^27.1.4",
         "typescript": "^5.0.2"
     }
 }
