--- a/package.json
+++ b/package.json
@@ -30,16 +30,12 @@
     },
     "homepage": "https://github.com/Tada5hi/trapi#readme",
     "engines": {
-        "node": ">=16.0.0"
+        "node": ">=18.0.0"
     },
     "scripts": {
-        "bootstrap": "lerna bootstrap",
         "commit": "npx git-cz",
-        "clean": "lerna run clean",
-        "build": "lerna run build",
-        "test": "lerna run test",
-        "prepublishOnly": "npm run build",
-        "pub": "lerna publish",
+        "build": "npx nx run-many -t build",
+        "test": "npx nx run-many -t test",
         "lint": "eslint --ext .ts ./packages/",
         "lint:fix": "npm run lint -- --fix",
         "prepare": "husky install"
@@ -55,8 +51,9 @@
         "eslint": "^8.50.0",
         "husky": "^8.0.3",
         "jest": "^29.6.1",
-        "lerna": "^7.1.4",
+        "nx": "^17.2.5",
         "rimraf": "^5.0.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.1.6",
+        "workspaces-publish": "^1.0.2"
     }
 }
