--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     # Maintain dependencies for npm
     - package-ecosystem: "npm"
       directory: "/"
+      open-pull-requests-limit: 10
       schedule:
           interval: "daily"
       versioning-strategy: "increase"
