--- a/packages/preset-decorators-express/package.json
+++ b/packages/preset-decorators-express/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@trapi/preset-decorators-express",
-    "version": "0.1.1-alpha.9",
+    "version": "0.1.1",
     "description": "Preset for @decorators/express library.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
