--- a/packages/preset-typescript-rest/package.json
+++ b/packages/preset-typescript-rest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@trapi/preset-typescript-rest",
-    "version": "1.0.1-alpha.9",
+    "version": "1.0.1",
     "description": "Preset for typescript-rest library.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
