--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,30 @@ updates:
     # Maintain dependencies for npm
     - package-ecosystem: "npm"
       directory: "/"
-      open-pull-requests-limit: 10
       schedule:
           interval: "daily"
       versioning-strategy: "increase"
+      target-branch: "master"
+      open-pull-requests-limit: 20
+      commit-message:
+          prefix: "fix"
+          prefix-development: "build"
+          include: "scope"
+      groups:
+          majorProd:
+              applies-to: version-updates
+              dependency-type: production
+              update-types:
+                  - "major"
+          majorDev:
+              applies-to: version-updates
+              dependency-type: development
+              exclude-patterns:
+                  - "eslint"
+              update-types:
+                  - "major"
+          minorAndPatch:
+              applies-to: version-updates
+              update-types:
+                  - "patch"
+                  - "minor"
