--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "strict": true,
         "experimentalDecorators": true
     }
 }
